@@ -3,16 +3,21 @@ alt-alt-radius=Alt-mode display radius
 alt-alt-radius-indicator=Always show display radius indicator
 alt-alt-update-interval=Update interval
 alt-alt-turn-off-completely=Turn off regular alt-mode completely
-alt-alt-show-quality-badge=Show quality badge
+alt-alt-show-quality-badge=Display quality badge
 alt-alt-show-quality-background=Use quality colour for icon backgrounds
+alt-alt-toggle-robots=Display cargo carried by robots
+alt-alt-toggle-poles=Display total network usage on power poles
+alt-alt-toggle-accus=Display accumulator charge
+alt-alt-toggle-heatpipes=Display heat pipe temperature
 
 [mod-setting-description]
 alt-alt-radius=WARNING, setting this too high might cause performance issues. Set to 0 to only show selected entity.\n__CONTROL__alt-alt-increase-radius__ to increase and  __CONTROL__alt-alt-decrease-radius__ to decrease.
 alt-alt-radius-indicator=Turn the radius indicator around the cursor on or off.
 alt-alt-update-interval=Time in ticks between each update. Every update all icons are refreshed, and the cursor position is updated. Larger intervals means better performance for a less smooth experience.
 alt-alt-turn-off-completely=If false, pressing alt toggles between off, alternative alt-mode and regular mode.\nIf true, only toggles between off and alternative alt-mode.
-alt-alt-show-quality-badge=Show the quality icon at the bottom left of items, recipes and signals
+alt-alt-show-quality-badge=Display the quality icon at the bottom left of items, recipes and signals
 alt-alt-show-quality-background=Colour the background of items, recipes and signals the colour of the quality. Otherwise, black.
+alt-alt-toggle-robots=There is currently (Factorio 2.0.28) a bug where the sprite does not follow robots properly, so this is off by default. See FFF-421 and forum topic 125393.
 
 [controls]
 alt-alt-increase-radius=Increase the radius of alternative alt-mode
